Fix a bunch of regressions from namespacing jQuery in admin

--- a/mezzanine/core/static/css/mezzanine.css
+++ b/mezzanine/core/static/css/mezzanine.css
@@ -19,9 +19,8 @@ ul, ol {
 }
 .navbar-text {
   font-style: italic;
-  font-size: 12px;
+  font-size: 11px;
   color: #aaa !important;
-  margin-left: 5px;
   line-height: 100%;
   padding-top: 5px;
 }
